# minecraft-server-constructor

./: .geminiignore  .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE.md  README.ja.md  README.md  build.bat
.github/workflows/: build.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: browse.rs  deploy.rs  fetch.rs  mod.rs  system.rs  template.rs  types.rs
app/src/components/layout/: Header.tsx  Sidebar.tsx
app/src/components/tabs/: AboutTab.tsx  Browse.tsx  DashboardTab.tsx  DeployTab.tsx  PluginsTab.tsx  SecurityTab.tsx  SettingsTab.tsx
app/src/components/ui/: Button.tsx  NotificationOverlay.tsx  Select.tsx  Switch.tsx  TitleBar.tsx
app/src/lang/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  th.json  tr.json  vi.json  zh-CN.json  zh-TW.json
app/src/lib/: utils.ts
app/src/store/: notificationStore.ts
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  orchestrator.rs
lib/src/config/: backend.rs  eula.rs  limbo.rs  mod.rs  velocity.rs
lib/src/fetcher/: arclight.rs  bds.rs  cache.rs  fabric.rs  github.rs  jar.rs  jdk.rs  mod.rs  papermc.rs  plugins.rs  purpur.rs  vanilla.rs
lib/src/runner/: jvm.rs  mod.rs
