[package]
name = "msb"
version = "1.0.0"
description = "High-performance Minecraft Server cluster orchestrator built with Rust and React."
authors = ["ReaQwQ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "msb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
msb-core = { path = "../../lib" }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
chrono = "0.4"
sysinfo = "0.30"
